tablet media update
Added tablet media queries

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
         <section class="aboutme_section">
             <img class="me_photo-front" src="img/geovanne_left.png" alt="minha foto de frente">
             <div class="aboutme">
-                <h2 class="aboutme_title">Prazer! Meu nome é Geovanne H. Costa</h2>
-                <p class="aboutme_text"> Neste momento, estou à procura de uma nova oportunidade de emprego na área de
+                <h2 class="aboutme_title titles">Prazer! Meu nome é Geovanne H. Costa</h2>
+                <p class="aboutme_text text"> Neste momento, estou à procura de uma nova oportunidade de emprego na área de
                     tecnologia e sei que o mercado de trabalho está difícil a cada dia. No entanto, não devemos baixar a
                     cabeça e desistir. Por isso, tive a ideia de criar este site para que você possa me conhecer melhor
                     e, talvez, me ajudar a conquistar minha primeira vaga na área de tecnologia na sua empresa.</p>
@@ -68,29 +68,29 @@
             <img class="arrow_image" src="img/arrow.svg" alt="seta">
         </div>
         <section class="occupation_section">
-            <h2 class="occupation_title">Talvez tenha me conhecido durante a entrega...</h2>
-            <p class="occupation_description">Sim, estou fazendo entregas pelo Ifood para conseguir pagar meus estudos.
+            <h2 class="occupation_title titles">Talvez tenha me conhecido durante a entrega...</h2>
+            <p class="occupation_text text">Sim, estou fazendo entregas pelo Ifood para conseguir pagar meus estudos.
             </p>
-            <p class="occupation_studies">Atualmente, sou estudante de engenharia da computação prestes a me formar,
+            <p class="occupation_studies text">Atualmente, sou estudante de engenharia da computação prestes a me formar,
                 porém para conseguir
                 esta conquista, preciso encontrar um estágio em alguma empresa.</p>
             <div class="thrive">
                 <img class="thrive_image" src="img/men_vetor.svg" alt="Vetor homem no computador">
-                <p class="thrive_text">Tenho certeza que 2024 será um ano de sucesso.</p>
+                <p class="thrive_text text">Tenho certeza que 2024 será um ano de sucesso.</p>
             </div>
         </section>
         <section class="hobby_section">
             <div class="hobby">
-                <h2 class="hobby_title">Além disso...</h2>
-                <p class="hobby_text">Sou apaixonado por violino, tanto que me tornei violinista. </p>
-                <p class="hobby_text">Músico desde 2017 tentando melhorar cada vez mais e servindo a Deus com alegria.
+                <h2 class="hobby_title titles">Além disso...</h2>
+                <p class="hobby_text text">Sou apaixonado por violino, tanto que me tornei violinista. </p>
+                <p class="hobby_text text">Músico desde 2017 tentando melhorar cada vez mais e servindo a Deus com alegria.
                 </p>
             </div>
             <img class="hobby_image" src="img/violin.svg" alt="violino">
         </section>
         <section class="future_section">
-            <h2 class="future_title">Dentre diversas outras coisas que conheço</h2>
-            <p class="future_text">Sei que virá o momento certo de tudo, basta plantar.</p>
+            <h2 class="future_title titles">Dentre diversas outras coisas que conheço</h2>
+            <p class="future_text text">Sei que virá o momento certo de tudo, basta plantar.</p>
             <div class="phrase">
                 <p class="phrase_text">“O otimista é um tolo. O pessimista, um chato. Bom mesmo é ser um realista
                     esperançoso.”</p>
@@ -99,22 +99,22 @@
         </section>
         <hr class="line_break">
         <section class="contact_section">
-            <h2 class="contact_title">Entre em contato comigo:</h2>
-            <p class="contact_text">Mande alguma dica, talvez isso me ajude ou mande um e-mail!</p>
+            <h2 class="contact_title titles">Entre em contato comigo:</h2>
+            <p class="contact_text text">Mande alguma dica, talvez isso me ajude ou mande um e-mail!</p>
             <div>
                 <ul class="contact_list">
                     <li class="contact_item">
-                        <img class="contact_icon" src="img/whatsapp_icon.svg" alt="ícone do whatsapp preto">
-                        <p class="contact_detail">(11) 94302-1899</p>
+                        <a href="https://wa.me/5511943021899" target="_blank"><img class="contact_icon" src="img/whatsapp_icon.svg" alt="ícone do whatsapp preto"></a>
+                        <p class="text">(11) 94302-1899</p>
                     </li>
                     <li class="contact_item">
-                        <img class="contact_icon" src="img/gmail_icon.svg" alt="ícone do whatapp preto">
-                        <p class="contact_detail">geovannehc@gmail.com</p>
+                        <a href="mailto:geovannehc@gmail.com" target="_blank"><img class="contact_icon" src="img/gmail_icon.svg" alt="ícone do whatapp preto"></a>
+                        <p class="text">geovannehc@gmail.com</p>
                     </li>
                     <li class="contact_item">
-                        <img class="contact_icon LinkedIn_icon-black" src="img/linkedin_icon-black.svg"
-                            alt="ícone do linkedin preto">
-                        <p class="contact_detail">/geovannehc</p>
+                        <a href="https://www.linkedin.com/in/geovannehc/" target="_blank"><img class="contact_icon LinkedIn_icon-black" src="img/linkedin_icon-black.svg"
+                            alt="ícone do linkedin preto"></a>
+                        <p class="text">/geovannehc</p>
                     </li>
                 </ul>
             </div>
