--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
     <header class="header">
-        <a href="#"><img class="nav_logo" src="img/ghc_logo.svg" alt="ghc logo"></a>
+        <img class="nav_logo" src="img/ghc_logo.png" alt="ghc logo">
         <nav class="nav">
             <button class="btn-menu" aria-label="Abrir Menu" aria-haspopup="true" aria-controls="menu"
                 aria-expanded="false">
@@ -27,12 +27,13 @@
             </button>
             <ul class="menu" id="menu">
                 <li>
-                    <a class="nav_link" href="#">SOBRE MIM</a>
+                    <a class="nav_link" href="#about">SOBRE MIM</a>
                 </li>
                 <li>
-                    <a class="nav_link" href="#">FALE COMIGO</a>
+                    <a class="nav_link" href="#contact">FALE COMIGO</a>
                 </li>
             </ul>
+        </nav>
     </header>
     <main>
         <section class="share_section">
@@ -43,18 +44,18 @@
                     compartilhando meu currículo e LinkedIn.</p>
                 <p class="thank_text">Talvez você possa compartilhar meu currículo em sua empresa</p>
                 <div class="share_buttons">
-                    <a class="cv_btn" href="https://get-qr.com/KjKZwt" target="_blank"><img class="cv_btn-icon"
+                    <a class="cv_btn" href="https://drive.google.com/file/d/1P2ECSiuweGWrqu6U5WQng8pTtcaUxJEI/view?usp=sharing" target="_blank"><img class="cv_btn-icon"
                             src="img/share_icon.svg" alt="botão compartilhar CV">Compartilhar</a>
                     <p>ou</p>
-                    <a class="linkedin_btn" href="https://www.linkedin.com/in/geovannehc/" target="_blank"><img
-                            src="img/LinkedIn_icon.svg" alt="LinkedIn logo"></a>
+                    <a class="linkedin_btn" href="qr.codes/YwkWN1" target="_blank"><img
+                        src="img/LinkedIn_icon.svg" alt="LinkedIn logo"></a>
                 </div>
             </div>
             <img class="me_photo-left" src="img/geovanne_left.png" alt="minha foto apontando para a esquerda">
         </section>
-        <p class="know_more">Conheça mais sobre mim abaixo</p>
+        <p class="know_more" id="about">Conheça mais sobre mim abaixo</p>
         <!-- about me -->
-        <section class="aboutme_section">
+        <section class="aboutme_section" >
             <img class="me_photo-front" src="img/geovanne_left.png" alt="minha foto de frente">
             <div class="aboutme">
                 <h2 class="aboutme_title titles">Prazer! Meu nome é Geovanne H. Costa</h2>
@@ -97,12 +98,12 @@
                 <p class="phrase_reference">Ariano Suassuna</p>
             </div>
         </section>
-        <hr class="line_break">
-        <section class="contact_section">
+        <hr class="line_break" id="contact">
+        <section class="contact_section" >
             <h2 class="contact_title titles">Entre em contato comigo:</h2>
             <p class="contact_text text">Mande alguma dica, talvez isso me ajude ou mande um e-mail!</p>
             <div>
-                <ul class="contact_list">
+                <ul class="contact_list" >
                     <li class="contact_item">
                         <a href="https://wa.me/5511943021899" target="_blank"><img class="contact_icon" src="img/whatsapp_icon.svg" alt="ícone do whatsapp preto"></a>
                         <p class="text">(11) 94302-1899</p>
@@ -144,9 +145,9 @@
                     </p>
                 </li>
             </ul>
-            <img class="mention_ghc" src="img/ghc_logo.svg" alt="">
+            <img class="mention_ghc" src="img/ghc_logo.png" alt="ghc logo">
         </div>
-        <p class="created_by">2023 | Geovanne Costa - created by GHC</p>
+        <p class="created_by">2024 | Geovanne Costa - created by GHC</p>
     </footer>
 </body>
 
