--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Bem-Vindo!</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link defer rel='stylesheet' type='text/css' media='screen' href='style/main.css'>
-    <link defer rel='stylesheet' href='style/reset.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='style/main.css'>
+    <link rel='stylesheet' href='style/reset.css'>
     <link rel="icon" href="img/ghc_logo.svg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -44,22 +44,25 @@
                     compartilhando meu currículo e LinkedIn.</p>
                 <p class="thank_text">Talvez você possa compartilhar meu currículo em sua empresa</p>
                 <div class="share_buttons">
-                    <a class="cv_btn" href="https://drive.google.com/file/d/1P2ECSiuweGWrqu6U5WQng8pTtcaUxJEI/view?usp=sharing" target="_blank"><img class="cv_btn-icon"
-                            src="img/share_icon.svg" alt="botão compartilhar CV">Compartilhar</a>
+                    <a class="cv_btn"
+                        href="https://drive.google.com/file/d/1P2ECSiuweGWrqu6U5WQng8pTtcaUxJEI/view?usp=sharing"
+                        target="_blank"><img class="cv_btn-icon" src="img/share_icon.svg"
+                            alt="botão compartilhar CV">Compartilhar</a>
                     <p>ou</p>
-                    <a class="linkedin_btn" href="qr.codes/YwkWN1" target="_blank"><img
-                        src="img/LinkedIn_icon.svg" alt="LinkedIn logo"></a>
+                    <a class="linkedin_btn" href="https://qr.codes/YwkWN1" target="_blank"><img
+                            src="img/LinkedIn_icon.svg" alt="LinkedIn logo"></a>
                 </div>
             </div>
             <img class="me_photo-left" src="img/geovanne_left.png" alt="minha foto apontando para a esquerda">
         </section>
         <p class="know_more" id="about">Conheça mais sobre mim abaixo</p>
         <!-- about me -->
-        <section class="aboutme_section" >
+        <section class="aboutme_section">
             <img class="me_photo-front" src="img/geovanne_left.png" alt="minha foto de frente">
             <div class="aboutme">
                 <h2 class="aboutme_title titles">Prazer! Meu nome é Geovanne H. Costa</h2>
-                <p class="aboutme_text text"> Neste momento, estou à procura de uma nova oportunidade de emprego na área de
+                <p class="aboutme_text text"> Neste momento, estou à procura de uma nova oportunidade de emprego na área
+                    de
                     tecnologia e sei que o mercado de trabalho está difícil a cada dia. No entanto, não devemos baixar a
                     cabeça e desistir. Por isso, tive a ideia de criar este site para que você possa me conhecer melhor
                     e, talvez, me ajudar a conquistar minha primeira vaga na área de tecnologia na sua empresa.</p>
@@ -72,7 +75,8 @@
             <h2 class="occupation_title titles">Talvez tenha me conhecido durante a entrega...</h2>
             <p class="occupation_text text">Sim, estou fazendo entregas pelo Ifood para conseguir pagar meus estudos.
             </p>
-            <p class="occupation_studies text">Atualmente, sou estudante de engenharia da computação prestes a me formar,
+            <p class="occupation_studies text">Atualmente, sou estudante de engenharia da computação prestes a me
+                formar,
                 porém para conseguir
                 esta conquista, preciso encontrar um estágio em alguma empresa.</p>
             <div class="thrive">
@@ -84,7 +88,8 @@
             <div class="hobby">
                 <h2 class="hobby_title titles">Além disso...</h2>
                 <p class="hobby_text text">Sou apaixonado por violino, tanto que me tornei violinista. </p>
-                <p class="hobby_text text">Músico desde 2017 tentando melhorar cada vez mais e servindo a Deus com alegria.
+                <p class="hobby_text text">Músico desde 2017 tentando melhorar cada vez mais e servindo a Deus com
+                    alegria.
                 </p>
             </div>
             <img class="hobby_image" src="img/violin.svg" alt="violino">
@@ -99,22 +104,25 @@
             </div>
         </section>
         <hr class="line_break" id="contact">
-        <section class="contact_section" >
+        <section class="contact_section">
             <h2 class="contact_title titles">Entre em contato comigo:</h2>
             <p class="contact_text text">Mande alguma dica, talvez isso me ajude ou mande um e-mail!</p>
             <div>
-                <ul class="contact_list" >
+                <ul class="contact_list">
                     <li class="contact_item">
-                        <a href="https://wa.me/5511943021899" target="_blank"><img class="contact_icon" src="img/whatsapp_icon.svg" alt="ícone do whatsapp preto"></a>
+                        <a href="https://wa.me/5511943021899" target="_blank"><img class="contact_icon"
+                                src="img/whatsapp_icon.svg" alt="ícone do whatsapp preto"></a>
                         <p class="text">(11) 94302-1899</p>
                     </li>
                     <li class="contact_item">
-                        <a href="mailto:geovannehc@gmail.com" target="_blank"><img class="contact_icon" src="img/gmail_icon.svg" alt="ícone do whatapp preto"></a>
+                        <a href="mailto:geovannehc@gmail.com" target="_blank"><img class="contact_icon"
+                                src="img/gmail_icon.svg" alt="ícone do whatapp preto"></a>
                         <p class="text">geovannehc@gmail.com</p>
                     </li>
                     <li class="contact_item">
-                        <a href="https://www.linkedin.com/in/geovannehc/" target="_blank"><img class="contact_icon LinkedIn_icon-black" src="img/linkedin_icon-black.svg"
-                            alt="ícone do linkedin preto"></a>
+                        <a href="https://www.linkedin.com/in/geovannehc/" target="_blank"><img
+                                class="contact_icon LinkedIn_icon-black" src="img/linkedin_icon-black.svg"
+                                alt="ícone do linkedin preto"></a>
                         <p class="text">/geovannehc</p>
                     </li>
                 </ul>
