Keyframes and photos
Added key frames, changed photos and size photos, hover icons.

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <p class="know_more" id="about">Conheça mais sobre mim abaixo</p>
         <!-- about me -->
         <section class="aboutme_section">
-            <img class="me_photo-front" src="img/geovanne_left.png" alt="minha foto de frente">
+            <img class="me_photo-front" src="img/geovanne2.png" alt="minha foto de frente">
             <div class="aboutme">
                 <h2 class="aboutme_title titles">Prazer! Meu nome é Geovanne H. Costa</h2>
                 <p class="aboutme_text text"> Neste momento, estou à procura de uma nova oportunidade de emprego na área
@@ -73,7 +73,7 @@
         </div>
         <section class="occupation_section">
             <h2 class="occupation_title titles">Talvez tenha me conhecido durante a entrega...</h2>
-            <p class="occupation_text text">Sim, estou fazendo entregas pelo Ifood para conseguir pagar meus estudos.
+            <p class="occupation_text text">Sim, estou fazendo entregas pelo <span class="ifood">Ifood</span> para conseguir pagar meus estudos.
             </p>
             <p class="occupation_studies text">Atualmente, sou estudante de engenharia da computação prestes a me
                 formar,
