--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
                 <p class="thank_text">Talvez você possa compartilhar meu currículo em sua empresa</p>
                 <div class="share_buttons">
                     <a class="cv_btn"
-                        href="https://drive.google.com/file/d/1P2ECSiuweGWrqu6U5WQng8pTtcaUxJEI/view?usp=sharing"
+                        href="https://drive.google.com/file/d/1mKGRHqaPzvEvIDXP_ijSsh553weQzzbe/view?usp=sharing"
                         target="_blank"><img class="cv_btn-icon" src="img/share_icon.svg"
                             alt="botão compartilhar CV">Compartilhar</a>
                     <p>ou</p>
-                    <a class="linkedin_btn" href="https://qr.codes/YwkWN1" target="_blank"><img
+                    <a class="linkedin_btn" href="https://www.linkedin.com/in/geovannehc/" target="_blank"><img
                             src="img/LinkedIn_icon.svg" alt="LinkedIn logo"></a>
                 </div>
             </div>
