--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
         href="https://fonts.googleapis.com/css2?family=Bad+Script&family=Inter:slnt,wght@-10,200;0,300&family=K2D:wght@400;700&display=swap"
         rel="stylesheet">
     <script defer src="js/app.js"></script>
+    <script>
+        window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+    </script>
+    <script defer src="/_vercel/insights/script.js"></script>
 </head>
 
 <body>
@@ -73,7 +77,8 @@
         </div>
         <section class="occupation_section">
             <h2 class="occupation_title titles">Talvez tenha me conhecido durante a entrega...</h2>
-            <p class="occupation_text text">Sim, estou fazendo entregas pelo <span class="ifood">Ifood</span> para conseguir pagar meus estudos.
+            <p class="occupation_text text">Sim, estou fazendo entregas pelo <span class="ifood">Ifood</span> para
+                conseguir pagar meus estudos.
             </p>
             <p class="occupation_studies text">Atualmente, sou estudante de engenharia da computação prestes a me
                 formar,
@@ -110,7 +115,7 @@
             <div>
                 <ul class="contact_list">
                     <li class="contact_item">
-                        <a href="https://wa.me/5511943021899" target="_blank"><img class="contact_icon"
+                        <a href="https://wa.me/message/Y7AQQYGDZGPIM1" target="_blank"><img class="contact_icon"
                                 src="img/whatsapp_icon.svg" alt="ícone do whatsapp preto"></a>
                         <p class="text">(11) 94302-1899</p>
                     </li>
